Bug 1926830 - Use the frame time rather than the event timestamp when updating a wheel scroll animation with a new delta. r=hiro

The event timestamp has been observed to be less reliable, and it being
out of sync with the frame time can lead to things like scroll animations
hanging until the frame time catches up to the event timestamp.

Differential Revision: https://phabricator.services.mozilla.com/D238347